2020-11-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_html.c: Fix a bug that html-special was not working
	after the changes introduced in rev.55722 (pdf:bann accepts a
	reference ID).
	* type0.c: Add pseudo-unique tag to ToUnicode CMap name again.
	* configure.ac: Version 20201111.

2020-10-31  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfximage.c: Fix a bug that mps images are not reused when
	they are included multiple times. Bug introduced by "Forward
	reference" support added on 2020-07-21.
	* configure.ac: Version 20201031.

2020-10-28  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype0.c: Fix a bug that the conditional for deciding if
	CIDSet should be written is inverted. CIDSet is deprecated in
	PDF version 2.0.
	* cidtype2.c, type1.c, type1c.c: Do not write CIDSet and
	CharSet when the output PDF version is set to 2.0 or higher.
	* configure.ac: Version 20201028.

2020-10-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype0.c, cidtype2.c, type0.c: User defined CID-to-GID
	PostScript CMap with filename of the form
	REGISTRY-ORDERING-PSFontName can be loaded (if exist) for
	mapping CIDs to GIDs. This feature can be used for directory
	mapping CIDs to GIDs instead of
	CID -> to-code CMaps -> TrueType cmap -> GID route.
	* data/Adobe-Japan1-YuMincho-Regular: An example of CID-to-GID
	CMap file.
	* configure.ac: Version 20201019.

2020-10-14  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Fix a bug that checking array indices is wrong.
	* cidtype2.c: Warning message when CID is mapped to a sequence
	of several Unicode characters is corrected. Fix a wrong
	assumption introduced by xdvipdfmx.
	* configure.ac: Version 20201014.

2020-10-08  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.c: Fix problems introduced by the changes on 2020/10/03.
	Fix a possible problem of invalid access. Fix a problem that
	non-BMP characters are not handled properly for the "unicode"
	encoding.